# test-release

./: README.md  hello.py  pyproject.toml  requirements.txt  version.txt
.github/: CHANGELOG.md  release-please-config-rc.json  release-please-config.json  release-please-manifest.json
.github/workflows/: cicd.yaml  deploy.yml  promote-to-stable.yaml  set-next-rc-version.yaml
