[project]
name = "test-release-hello"
version = "0.1.0"
description = "A test project for release-please workflow testing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
hello = "hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["hello.py"]

[tool.hatch.build.targets.sdist]
only-include = ["hello.py", "pyproject.toml", "README.md", "version.txt"]
